@@ -2,25 +2,32 @@ package com.rarchives.ripme.ripper.rippers;
 
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.TreeMap;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
-import com.rarchives.ripme.ui.RipStatusMessage;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 import org.json.JSONArray;
-import org.json.JSONObject;
 import org.json.JSONException;
+import org.json.JSONObject;
 import org.jsoup.nodes.Document;
+import org.jsoup.nodes.Element;
 
 import com.rarchives.ripme.ripper.AbstractHTMLRipper;
 import com.rarchives.ripme.ripper.DownloadThreadPool;
+import com.rarchives.ripme.ui.RipStatusMessage;
 import com.rarchives.ripme.utils.Http;
-import org.jsoup.nodes.Element;
 
 public class FlickrRipper extends AbstractHTMLRipper {
 
-    private Document albumDoc = null;
+    private static final Logger logger = LogManager.getLogger(FlickrRipper.class);
+
     private final DownloadThreadPool flickrThreadPool;
 
     private enum UrlType {
@@ -63,7 +70,7 @@ public class FlickrRipper extends AbstractHTMLRipper {
     }
 
     @Override
-    public URL sanitizeURL(URL url) throws MalformedURLException {
+    public URL sanitizeURL(URL url) throws MalformedURLException, URISyntaxException {
         String sUrl = url.toExternalForm();
         // Strip out https
         sUrl = sUrl.replace("https://secure.flickr.com", "http://www.flickr.com");
@@ -74,7 +81,7 @@ public class FlickrRipper extends AbstractHTMLRipper {
             }
             sUrl += "pool";
         }
-        return new URL(sUrl);
+        return new URI(sUrl).toURL();
     }
     // FLickr is one of those sites what includes a api key in sites javascript
     // TODO let the user provide their own api key
@@ -86,11 +93,11 @@ public class FlickrRipper extends AbstractHTMLRipper {
             // You have to use .html here as .text will strip most of the javascript
             m = p.matcher(e.html());
             if (m.find()) {
-                LOGGER.info("Found api key:" + m.group(1));
+                logger.info("Found api key:" + m.group(1));
                 return m.group(1);
             }
         }
-        LOGGER.error("Unable to get api key");
+        logger.error("Unable to get api key");
         // A nice error message to tell our users what went wrong
         sendUpdate(RipStatusMessage.STATUS.DOWNLOAD_WARN, "Unable to extract api key from flickr");
         sendUpdate(RipStatusMessage.STATUS.DOWNLOAD_WARN, "Using hardcoded api key");
@@ -129,16 +136,16 @@ public class FlickrRipper extends AbstractHTMLRipper {
         String apiURL = null;
         try {
             apiURL = apiURLBuilder(getAlbum(url.toExternalForm()), page, apiKey);
-            pageURL = new URL(apiURL);
-        }  catch (MalformedURLException e) {
-            LOGGER.error("Unable to get api link " + apiURL + " is malformed");
+            pageURL = new URI(apiURL).toURL();
+        }  catch (MalformedURLException | URISyntaxException e) {
+            logger.error("Unable to get api link " + apiURL + " is malformed");
         }
         try {
-            LOGGER.info("Fetching: " + apiURL);
-            LOGGER.info("Response: " + Http.url(pageURL).ignoreContentType().get().text());
+            logger.info("Fetching: " + apiURL);
+            logger.info("Response: " + Http.url(pageURL).ignoreContentType().get().text());
             return new JSONObject(Http.url(pageURL).ignoreContentType().get().text());
         } catch (IOException e) {
-            LOGGER.error("Unable to get api link " + apiURL + " is malformed");
+            logger.error("Unable to get api link " + apiURL + " is malformed");
             return null;
         }
     }
@@ -167,18 +174,18 @@ public class FlickrRipper extends AbstractHTMLRipper {
 
         String errorMessage = "Failed to extract photoset ID from url: " + url;
 
-        LOGGER.error(errorMessage);
+        logger.error(errorMessage);
         throw new MalformedURLException(errorMessage);
     }
 
     @Override
-    public String getAlbumTitle(URL url) throws MalformedURLException {
+    public String getAlbumTitle(URL url) throws MalformedURLException, URISyntaxException {
         if (!url.toExternalForm().contains("/sets/")) {
             return super.getAlbumTitle(url);
         }
-        try {   
+        try {
             // Attempt to use album title as GID
-            Document doc = getFirstPage();
+            Document doc = getCachedFirstPage();
             String user = url.toExternalForm();
             user = user.substring(user.indexOf("/photos/") + "/photos/".length());
             user = user.substring(0, user.indexOf("/"));
@@ -228,13 +235,6 @@ public class FlickrRipper extends AbstractHTMLRipper {
                         + " Got: " + url);
     }
 
-    @Override
-    public Document getFirstPage() throws IOException {
-        if (albumDoc == null) {
-            albumDoc = Http.url(url).get();
-        }
-        return albumDoc;
-    }
 
     @Override
     public List<String> getURLsFromPage(Document doc) {
@@ -255,21 +255,21 @@ public class FlickrRipper extends AbstractHTMLRipper {
                     try {
                         rootData = jsonData.getJSONObject("photos");
                     } catch (JSONException innerE) {
-                        LOGGER.error("Unable to find photos in response");
+                        logger.error("Unable to find photos in response");
                         break;
                     }
                 }
 
                 int totalPages = rootData.getInt("pages");
-                LOGGER.info(jsonData);
+                logger.info(jsonData);
                 JSONArray pictures = rootData.getJSONArray("photo");
                 for (int i = 0; i < pictures.length(); i++) {
-                    LOGGER.info(i);
+                    logger.info(i);
                     JSONObject data = (JSONObject) pictures.get(i);
                     try {
                         addURLToDownload(getLargestImageURL(data.getString("id"), apiKey));
-                    } catch (MalformedURLException e) {
-                        LOGGER.error("Flickr MalformedURLException: " + e.getMessage());
+                    } catch (MalformedURLException | URISyntaxException e) {
+                        logger.error("Flickr MalformedURLException: " + e.getMessage());
                     }
 
                 }
@@ -291,11 +291,11 @@ public class FlickrRipper extends AbstractHTMLRipper {
         addURLToDownload(url, getPrefix(index));
     }
 
-    private URL getLargestImageURL(String imageID, String apiKey) throws MalformedURLException {
+    private URL getLargestImageURL(String imageID, String apiKey) throws MalformedURLException, URISyntaxException {
         TreeMap<Integer, String> imageURLMap = new TreeMap<>();
 
         try {
-            URL imageAPIURL = new URL("https://www.flickr.com/services/rest/?method=flickr.photos.getSizes&api_key=" + apiKey + "&photo_id=" + imageID + "&format=json&nojsoncallback=1");
+            URL imageAPIURL = new URI("https://www.flickr.com/services/rest/?method=flickr.photos.getSizes&api_key=" + apiKey + "&photo_id=" + imageID + "&format=json&nojsoncallback=1").toURL();
             JSONArray imageSizes = new JSONObject(Http.url(imageAPIURL).ignoreContentType().get().text()).getJSONObject("sizes").getJSONArray("size");
             for (int i = 0; i < imageSizes.length(); i++) {
                 JSONObject imageInfo = imageSizes.getJSONObject(i);
@@ -303,13 +303,13 @@ public class FlickrRipper extends AbstractHTMLRipper {
             }
 
         } catch (org.json.JSONException e) {
-            LOGGER.error("Error in  parsing of Flickr API: " + e.getMessage());
+            logger.error("Error in  parsing of Flickr API: " + e.getMessage());
         } catch (MalformedURLException e) {
-            LOGGER.error("Malformed URL returned by API");
+            logger.error("Malformed URL returned by API");
         } catch (IOException e) {
-            LOGGER.error("IOException while looking at image sizes: " + e.getMessage());
+            logger.error("IOException while looking at image sizes: " + e.getMessage());
         }
 
-        return new URL(imageURLMap.lastEntry().getValue());
+        return new URI(imageURLMap.lastEntry().getValue()).toURL();
     }
 }
