@@ -1,20 +1,24 @@
 package com.rarchives.ripme.tst.ripper.rippers;
 
 import java.io.IOException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.List;
 
 import com.rarchives.ripme.ripper.rippers.BooruRipper;
 import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 
 public class BooruRipperTest extends RippersTest {
     @Test
-    public void testRip() throws IOException {
+    @Tag("flaky")
+    public void testRip() throws IOException, URISyntaxException {
         List<URL> passURLs = new ArrayList<>();
-        passURLs.add(new URL("https://xbooru.com/index.php?page=post&s=list&tags=furry"));
-        passURLs.add(new URL("https://gelbooru.com/index.php?page=post&s=list&tags=animal_ears"));
+        passURLs.add(new URI("https://xbooru.com/index.php?page=post&s=list&tags=furry").toURL());
+        passURLs.add(new URI("https://gelbooru.com/index.php?page=post&s=list&tags=animal_ears").toURL());
 
         for (URL url : passURLs) {
             BooruRipper ripper = new BooruRipper(url);
@@ -23,9 +27,9 @@ public class BooruRipperTest extends RippersTest {
     }
 
     @Test
-    public void testGetGID() throws IOException {
-        URL xbooruUrl = new URL("https://xbooru.com/index.php?page=post&s=list&tags=furry");
-        URL gelbooruUrl = new URL("https://gelbooru.com/index.php?page=post&s=list&tags=animal_ears");
+    public void testGetGID() throws IOException, URISyntaxException {
+        URL xbooruUrl = new URI("https://xbooru.com/index.php?page=post&s=list&tags=furry").toURL();
+        URL gelbooruUrl = new URI("https://gelbooru.com/index.php?page=post&s=list&tags=animal_ears").toURL();
 
         BooruRipper xbooruRipper = new BooruRipper(xbooruUrl);
         BooruRipper gelbooruRipper = new BooruRipper(gelbooruUrl);
@@ -35,9 +39,9 @@ public class BooruRipperTest extends RippersTest {
     }
 
     @Test
-    public void testGetDomain() throws IOException {
-        URL xbooruUrl = new URL("https://xbooru.com/index.php?page=post&s=list&tags=furry");
-        URL gelbooruUrl = new URL("https://gelbooru.com/index.php?page=post&s=list&tags=animal_ears");
+    public void testGetDomain() throws IOException, URISyntaxException {
+        URL xbooruUrl = new URI("https://xbooru.com/index.php?page=post&s=list&tags=furry").toURL();
+        URL gelbooruUrl = new URI("https://gelbooru.com/index.php?page=post&s=list&tags=animal_ears").toURL();
 
         BooruRipper xbooruRipper = new BooruRipper(xbooruUrl);
         BooruRipper gelbooruRipper = new BooruRipper(gelbooruUrl);
@@ -47,9 +51,9 @@ public class BooruRipperTest extends RippersTest {
     }
 
     @Test
-    public void testGetHost() throws IOException {
-        URL xbooruUrl = new URL("https://xbooru.com/index.php?page=post&s=list&tags=furry");
-        URL gelbooruUrl = new URL("https://gelbooru.com/index.php?page=post&s=list&tags=animal_ears");
+    public void testGetHost() throws IOException, URISyntaxException {
+        URL xbooruUrl = new URI("https://xbooru.com/index.php?page=post&s=list&tags=furry").toURL();
+        URL gelbooruUrl = new URI("https://gelbooru.com/index.php?page=post&s=list&tags=animal_ears").toURL();
 
         BooruRipper xbooruRipper = new BooruRipper(xbooruUrl);
         BooruRipper gelbooruRipper = new BooruRipper(gelbooruUrl);
