@@ -2,19 +2,23 @@ package com.rarchives.ripme.tst.ripper.rippers;
 
 import com.rarchives.ripme.ripper.rippers.DanbooruRipper;
 import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 
 import java.io.IOException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.List;
 
 public class DanbooruRipperTest extends RippersTest {
     @Test
-    public void testRip() throws IOException {
+    @Tag("flaky")
+    public void testRip() throws IOException, URISyntaxException {
         List<URL> passURLs = new ArrayList<>();
-        passURLs.add(new URL("https://danbooru.donmai.us/posts?tags=brown_necktie"));
-        passURLs.add(new URL("https://danbooru.donmai.us/posts?page=1&tags=pink_sweater_vest"));
+        passURLs.add(new URI("https://danbooru.donmai.us/posts?tags=brown_necktie").toURL());
+        passURLs.add(new URI("https://danbooru.donmai.us/posts?page=1&tags=pink_sweater_vest").toURL());
 
         for (URL url : passURLs) {
             DanbooruRipper danbooruRipper = new DanbooruRipper(url);
@@ -23,9 +27,9 @@ public class DanbooruRipperTest extends RippersTest {
     }
 
     @Test
-    public void testGetGID() throws IOException {
-        URL danBooruUrl = new URL("https://danbooru.donmai.us/posts?tags=brown_necktie");
-        URL danBooruUrl2 = new URL("https://danbooru.donmai.us/posts?page=1&tags=pink_sweater_vest");
+    public void testGetGID() throws IOException, URISyntaxException {
+        URL danBooruUrl = new URI("https://danbooru.donmai.us/posts?tags=brown_necktie").toURL();
+        URL danBooruUrl2 = new URI("https://danbooru.donmai.us/posts?page=1&tags=pink_sweater_vest").toURL();
 
         DanbooruRipper danbooruRipper = new DanbooruRipper(danBooruUrl);
         DanbooruRipper danbooruRipper2 = new DanbooruRipper(danBooruUrl2);
@@ -35,8 +39,8 @@ public class DanbooruRipperTest extends RippersTest {
     }
 
     @Test
-    public void testGetHost() throws IOException {
-        URL danBooruUrl = new URL("https://danbooru.donmai.us/posts?tags=brown_necktie");
+    public void testGetHost() throws IOException, URISyntaxException {
+        URL danBooruUrl = new URI("https://danbooru.donmai.us/posts?tags=brown_necktie").toURL();
 
         DanbooruRipper danbooruRipper = new DanbooruRipper(danBooruUrl);
 
