@@ -1,25 +1,30 @@
 package com.rarchives.ripme.tst.ripper.rippers;
 
 import java.io.IOException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.List;
 
 import com.rarchives.ripme.ripper.rippers.HentaiNexusRipper;
 import org.json.JSONObject;
-import org.junit.Assert;
+import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 public class HentainexusRipperTest extends RippersTest {
     @Test
     @Tag("flaky")
-    public void testHentaiNexusJson() throws IOException {
+    @Disabled("20/05/2021 This test was disabled as the site has experienced notable downtime")
+    public void testHentaiNexusJson() throws IOException, URISyntaxException {
         List<URL> testURLs = new ArrayList<>();
-        testURLs.add(new URL("https://hentainexus.com/view/9202"));
-        testURLs.add(new URL("https://hentainexus.com/read/9202"));
-        testURLs.add(new URL("https://hentainexus.com/view/9202#001"));
-        testURLs.add(new URL("https://hentainexus.com/read/9202#001"));
+        testURLs.add(new URI("https://hentainexus.com/view/9202").toURL());
+        testURLs.add(new URI("https://hentainexus.com/read/9202").toURL());
+        testURLs.add(new URI("https://hentainexus.com/view/9202#001").toURL());
+        testURLs.add(new URI("https://hentainexus.com/read/9202#001").toURL());
 
         for (URL url : testURLs) {
 
@@ -39,7 +44,7 @@ public class HentainexusRipperTest extends RippersTest {
                 testOK  = false;
             }
 
-            Assert.assertEquals(true, testOK);
+            assertEquals(true, testOK);
         }
 
     }
