@@ -1,7 +1,8 @@
 package com.rarchives.ripme.tst.ripper.rippers;
 
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 import com.rarchives.ripme.ripper.rippers.ImagebamRipper;
 import org.junit.jupiter.api.Tag;
@@ -10,8 +11,8 @@ import org.junit.jupiter.api.Test;
 public class ImagebamRipperTest extends RippersTest {
     @Test
     @Tag("flaky")
-    public void testImagebamRip() throws IOException {
-        ImagebamRipper ripper = new ImagebamRipper(new URL("http://www.imagebam.com/gallery/488cc796sllyf7o5srds8kpaz1t4m78i"));
+    public void testImagebamRip() throws IOException, URISyntaxException {
+        ImagebamRipper ripper = new ImagebamRipper(new URI("http://www.imagebam.com/gallery/488cc796sllyf7o5srds8kpaz1t4m78i").toURL());
         testRipper(ripper);
     }
 }
