@@ -1,6 +1,8 @@
 package com.rarchives.ripme.tst.ripper.rippers;
 
 import java.io.IOException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 
 import com.rarchives.ripme.ripper.rippers.PhotobucketRipper;
@@ -13,9 +15,9 @@ public class PhotobucketRipperTest extends RippersTest {
 
     @Test
     @Disabled("https://github.com/RipMeApp/ripme/issues/229 : Disabled test (temporary) : BasicRippersTest#testPhotobucketRip (timing out)")
-    public void testPhotobucketRip() throws IOException {
+    public void testPhotobucketRip() throws IOException, URISyntaxException {
         PhotobucketRipper ripper = new PhotobucketRipper(
-                new URL("http://s844.photobucket.com/user/SpazzySpizzy/library/Album%20Covers?sort=3&page=1"));
+                new URI("http://s844.photobucket.com/user/SpazzySpizzy/library/Album%20Covers?sort=3&page=1").toURL());
         testRipper(ripper);
         deleteSubdirs(ripper.getWorkingDir());
         deleteDir(ripper.getWorkingDir());
@@ -23,12 +25,12 @@ public class PhotobucketRipperTest extends RippersTest {
 
     @Test
     @Disabled("new test, still disabled out because of the issue above, since this test also involves network IO.")
-    public void testGetNextPage() throws IOException {
+    public void testGetNextPage() throws IOException, URISyntaxException {
         // this album should have more than enough sub-albums and pages
         // to serve as a pretty good iteration test (barring server or
         // network errors)
         String baseURL = "http://s1255.photobucket.com/user/mimajki/library/Movie%20gifs?sort=6&page=1";
-        URL url = new URL(baseURL);
+        URL url = new URI(baseURL).toURL();
         PhotobucketRipper ripper = new PhotobucketRipper(url);
         org.jsoup.nodes.Document page = ripper.getFirstPage();
         // NOTE: number of pages remaining includes the subalbums
@@ -47,17 +49,17 @@ public class PhotobucketRipperTest extends RippersTest {
     }
 
     @Test
-    public void testGetGID() throws IOException {
-        URL url = new URL(
-                "http://s732.photobucket.com/user/doublesix66/library/Army%20Painter%20examples?sort=3&page=1");
+    public void testGetGID() throws IOException, URISyntaxException {
+        URL url = new URI(
+                "http://s732.photobucket.com/user/doublesix66/library/Army%20Painter%20examples?sort=3&page=1").toURL();
         PhotobucketRipper ripper = new PhotobucketRipper(url);
         Assertions.assertEquals("doublesix66", ripper.getGID(url));
-        url = new URL(
-                "http://s732.photobucket.com/user/doublesix66/library/Army%20Painter%20examples/Painting%20examples?page=1&sort=3");
+        url = new URI(
+                "http://s732.photobucket.com/user/doublesix66/library/Army%20Painter%20examples/Painting%20examples?page=1&sort=3").toURL();
         Assertions.assertEquals("doublesix66", ripper.getGID(url));
-        url = new URL("http://s844.photobucket.com/user/SpazzySpizzy/library/Album%20Covers");
+        url = new URI("http://s844.photobucket.com/user/SpazzySpizzy/library/Album%20Covers").toURL();
         Assertions.assertEquals("SpazzySpizzy", ripper.getGID(url));
-        url = new URL("http://s844.photobucket.com/user/SpazzySpizzy/library");
+        url = new URI("http://s844.photobucket.com/user/SpazzySpizzy/library").toURL();
         Assertions.assertEquals("SpazzySpizzy", ripper.getGID(url));
     }
 }
