@@ -1,7 +1,8 @@
 package com.rarchives.ripme.tst.ripper.rippers;
 
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 import com.rarchives.ripme.ripper.rippers.PichunterRipper;
 
@@ -11,18 +12,18 @@ import org.junit.jupiter.api.Test;
 public class PichunterRipperTest extends RippersTest {
     @Test
     @Tag("flaky")
-    public void testPichunterModelPageRip() throws IOException {
+    public void testPichunterModelPageRip() throws IOException, URISyntaxException {
         // A non-photoset
-        PichunterRipper ripper = new PichunterRipper(new URL("https://www.pichunter.com/models/Madison_Ivy"));
+        PichunterRipper ripper = new PichunterRipper(new URI("https://www.pichunter.com/models/Madison_Ivy").toURL());
         testRipper(ripper);
     }
 
     @Test
     @Tag("flaky")
-    public void testPichunterGalleryRip() throws IOException {
+    public void testPichunterGalleryRip() throws IOException, URISyntaxException {
         // a photo set
         PichunterRipper ripper = new PichunterRipper(
-                new URL("http://www.pichunter.com/gallery/3270642/Its_not_only_those_who"));
+                new URI("http://www.pichunter.com/gallery/3270642/Its_not_only_those_who").toURL());
         testRipper(ripper);
     }
 }
