@@ -1,38 +1,49 @@
 package com.rarchives.ripme.tst.ripper.rippers;
 
 import java.io.IOException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 
-import com.rarchives.ripme.ripper.rippers.PornhubRipper;
-import com.rarchives.ripme.utils.Http;
-import com.rarchives.ripme.utils.Utils;
 import org.jsoup.nodes.Document;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 
+import com.rarchives.ripme.ripper.rippers.PornhubRipper;
+import com.rarchives.ripme.utils.Http;
+import com.rarchives.ripme.utils.Utils;
+
 public class PornhubRipperTest extends RippersTest {
     @Test
-    public void testPornhubRip() throws IOException {
+    public void testPornhubAlbumRip() throws IOException, URISyntaxException {
         if (Utils.getConfigBoolean("test.run_flaky_tests", false)) {
-            PornhubRipper ripper = new PornhubRipper(new URL("https://www.pornhub.com/album/15680522"));
+            PornhubRipper ripper = new PornhubRipper(new URI("https://www.pornhub.com/album/6299702").toURL());
             testRipper(ripper);
         }
     }
 
-    public void testGetGID() throws IOException {
-        URL url = new URL("https://www.pornhub.com/album/15680522?page=2");
+    @Test
+    public void testPornhubMultiPageAlbumRip() throws IOException, URISyntaxException {
+        if (Utils.getConfigBoolean("test.run_flaky_tests", false)) {
+            PornhubRipper ripper = new PornhubRipper(new URI("https://www.pornhub.com/album/39341891").toURL());
+            testRipper(ripper);
+        }
+    }
+
+    public void testGetGID() throws IOException, URISyntaxException {
+        URL url = new URI("https://www.pornhub.com/album/15680522?page=2").toURL();
         PornhubRipper ripper = new PornhubRipper(url);
         Assertions.assertEquals("15680522", ripper.getGID(url));
-        url = new URL("https://www.pornhub.com/album/15680522");
+        url = new URI("https://www.pornhub.com/album/15680522").toURL();
         Assertions.assertEquals("15680522", ripper.getGID(url));
     }
 
     @Test
     @Tag("flaky")
-    public void testGetNextPage() throws IOException {
-        String baseURL = "https://www.pornhub.com/album/30687901";
-        PornhubRipper ripper = new PornhubRipper(new URL(baseURL));
+    public void testGetNextPage() throws IOException, URISyntaxException {
+        String baseURL = "https://www.pornhub.com/album/39341891";
+        PornhubRipper ripper = new PornhubRipper(new URI(baseURL).toURL());
         Document page = Http.url(baseURL).get();
         int numPagesRemaining = 1;
         for (int idx = 0; idx < numPagesRemaining; idx++){
