@@ -1,6 +1,8 @@
 package com.rarchives.ripme.tst.ripper.rippers;
 
 import java.io.IOException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 
 import com.rarchives.ripme.ripper.rippers.SmuttyRipper;
@@ -11,14 +13,14 @@ import org.junit.jupiter.api.Test;
 public class SmuttyRipperTest extends RippersTest {
     @Test
     @Tag("flaky")
-    public void testRip() throws IOException {
-        SmuttyRipper ripper = new SmuttyRipper(new URL("https://smutty.com/user/QUIGON/"));
+    public void testRip() throws IOException, URISyntaxException {
+        SmuttyRipper ripper = new SmuttyRipper(new URI("https://smutty.com/user/QUIGON/").toURL());
         testRipper(ripper);
     }
 
     @Test
-    public void testGetGID() throws IOException {
-        URL url = new URL("https://smutty.com/user/QUIGON/");
+    public void testGetGID() throws IOException, URISyntaxException {
+        URL url = new URI("https://smutty.com/user/QUIGON/").toURL();
         SmuttyRipper ripper = new SmuttyRipper(url);
         Assertions.assertEquals("QUIGON", ripper.getGID(url));
     }
