@@ -1,7 +1,8 @@
 package com.rarchives.ripme.tst.ripper.rippers;
 
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 import com.rarchives.ripme.ripper.rippers.TwitterRipper;
 
@@ -11,16 +12,16 @@ import org.junit.jupiter.api.Test;
 public class TwitterRipperTest extends RippersTest {
     @Test
     @Tag("flaky")
-    public void testTwitterUserRip() throws IOException {
-        TwitterRipper ripper = new TwitterRipper(new URL("https://twitter.com/danngamber01/media"));
+    public void testTwitterUserRip() throws IOException, URISyntaxException {
+        TwitterRipper ripper = new TwitterRipper(new URI("https://twitter.com/danngamber01/media").toURL());
         testRipper(ripper);
     }
 
     @Test
     @Tag("flaky")
-    public void testTwitterSearchRip() throws IOException {
+    public void testTwitterSearchRip() throws IOException, URISyntaxException {
         TwitterRipper ripper = new TwitterRipper(
-                new URL("https://twitter.com/search?f=tweets&q=from%3Aalinalixxx%20filter%3Aimages&src=typd"));
+                new URI("https://twitter.com/search?f=tweets&q=from%3Aalinalixxx%20filter%3Aimages&src=typd").toURL());
         testRipper(ripper);
     }
 
