@@ -1,6 +1,8 @@
 package com.rarchives.ripme.tst.ripper.rippers;
 
 import java.io.IOException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 
 import com.rarchives.ripme.ripper.rippers.ZizkiRipper;
@@ -12,22 +14,22 @@ public class ZizkiRipperTest extends RippersTest {
 
     @Test
     @Tag("flaky")
-    public void testRip() throws IOException {
-        ZizkiRipper ripper = new ZizkiRipper(new URL("http://zizki.com/dee-chorde/we-got-spirit"));
+    public void testRip() throws IOException, URISyntaxException {
+        ZizkiRipper ripper = new ZizkiRipper(new URI("http://zizki.com/dee-chorde/we-got-spirit").toURL());
         testRipper(ripper);
     }
 
     @Test
-    public void testGetGID() throws IOException {
-        URL url = new URL("http://zizki.com/dee-chorde/we-got-spirit");
+    public void testGetGID() throws IOException, URISyntaxException {
+        URL url = new URI("http://zizki.com/dee-chorde/we-got-spirit").toURL();
         ZizkiRipper ripper = new ZizkiRipper(url);
         Assertions.assertEquals("dee-chorde", ripper.getGID(url));
     }
 
     @Test
     @Tag("flaky")
-    public void testAlbumTitle() throws IOException {
-        URL url = new URL("http://zizki.com/dee-chorde/we-got-spirit");
+    public void testAlbumTitle() throws IOException, URISyntaxException {
+        URL url = new URI("http://zizki.com/dee-chorde/we-got-spirit").toURL();
         ZizkiRipper ripper = new ZizkiRipper(url);
         Assertions.assertEquals("zizki_Dee Chorde_We Got Spirit", ripper.getAlbumTitle(url));
     }
